--- a/.github/workflows/ci-test-deploy.yml
+++ b/.github/workflows/ci-test-deploy.yml
@@ -18,54 +18,57 @@ permissions:
   id-token: write
 
 jobs:
-  test:
-    name: Test & Build
+  # =====================================================================
+  # JS Lane — Playwright + AccessFlow Node SDK
+  # =====================================================================
+  test-js:
+    name: JS Lane — Playwright Tests
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: 🔧 Setup Node.js 20.x
+      - name: Setup Node.js 20.x
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           cache: 'npm'
 
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: npm ci
 
-      - name: 🎭 Install Playwright Browsers
+      - name: Install Playwright Browsers
         run: npx playwright install --with-deps chromium
 
-      - name: 🔨 Build application
+      - name: Build application
         run: npm run build
         env:
           CI: true
 
-      - name: 🧪 Run Playwright Tests with AccessFlow SDK
+      - name: Run JS Playwright Tests
         run: npm run test:e2e
         env:
           CI: true
           ACCESSFLOW_API_KEY: ${{ secrets.ACCESSFLOW_API_KEY }}
 
-      - name: 📊 Upload Playwright Report
+      - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: playwright-report
+          name: js-playwright-report
           path: test-suite/playwright-report/
           retention-days: 30
 
-      - name: 📋 Upload Test Results
+      - name: Upload Test Results
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: test-results
+          name: js-test-results
           path: test-suite/test-results/
           retention-days: 30
 
-      - name: 📦 Upload Build Artifacts
+      - name: Upload Build Artifacts
         if: success()
         uses: actions/upload-artifact@v4
         with:
@@ -73,9 +76,138 @@ jobs:
           path: build/
           retention-days: 7
 
+  # =====================================================================
+  # Python Lane — pytest-playwright + AccessFlow Python SDK
+  # =====================================================================
+  test-python:
+    name: Python Lane — Playwright Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install Node dependencies & build app
+        run: |
+          npm ci
+          npm run build
+        env:
+          CI: true
+
+      - name: Setup Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install Python dependencies
+        run: pip install -r python-tests/requirements.txt
+
+      - name: Install Playwright Browsers (Python)
+        run: python -m playwright install --with-deps chromium
+
+      - name: Start application server
+        run: npm start &
+        env:
+          BROWSER: none
+
+      - name: Wait for application
+        run: |
+          for i in $(seq 1 60); do
+            curl -sf http://localhost:3000 > /dev/null 2>&1 && echo "App ready!" && exit 0
+            sleep 1
+          done
+          echo "App did not start within 60 s" && exit 1
+
+      - name: Run Python Playwright Tests
+        working-directory: python-tests
+        run: pytest --junitxml=test-results/results.xml
+        env:
+          CI: true
+          ACCESSFLOW_API_KEY: ${{ secrets.ACCESSFLOW_API_KEY }}
+
+      - name: Upload Python Test Results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: python-test-results
+          path: python-tests/test-results/
+          retention-days: 30
+
+  # =====================================================================
+  # Java Lane — JUnit 5 + Playwright Java + AccessFlow Java SDK
+  # =====================================================================
+  test-java:
+    name: Java Lane — Playwright Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install Node dependencies & build app
+        run: |
+          npm ci
+          npm run build
+        env:
+          CI: true
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
+
+      - name: Install Playwright Browsers (Java)
+        working-directory: java-tests
+        run: mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args="install --with-deps chromium"
+
+      - name: Start application server
+        run: npm start &
+        env:
+          BROWSER: none
+
+      - name: Wait for application
+        run: |
+          for i in $(seq 1 60); do
+            curl -sf http://localhost:3000 > /dev/null 2>&1 && echo "App ready!" && exit 0
+            sleep 1
+          done
+          echo "App did not start within 60 s" && exit 1
+
+      - name: Run Java Playwright Tests
+        working-directory: java-tests
+        run: mvn test -B
+        env:
+          CI: true
+          ACCESSFLOW_API_KEY: ${{ secrets.ACCESSFLOW_API_KEY }}
+
+      - name: Upload Java Test Results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: java-test-results
+          path: java-tests/target/surefire-reports/
+          retention-days: 30
+
+  # =====================================================================
+  # Deploy
+  # =====================================================================
   deploy:
     name: Deploy to GitHub Pages
-    needs: test
+    needs: [test-js, test-python, test-java]
     runs-on: ubuntu-latest
     # Deploy from main, master, develop, and dev branches
     if: |
@@ -87,19 +219,19 @@ jobs:
       )
 
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: 🔧 Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           cache: 'npm'
 
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: npm ci
 
-      - name: 🎯 Determine branch path
+      - name: Determine branch path
         id: branch-path
         run: |
           BRANCH_NAME="${GITHUB_REF#refs/heads/}"
@@ -122,7 +254,7 @@ jobs:
           echo "Deploy path: $(cat $GITHUB_OUTPUT | grep path= | cut -d= -f2)"
           echo "Public URL: $(cat $GITHUB_OUTPUT | grep public_url= | cut -d= -f2)"
 
-      - name: 🔨 Build application with branch-specific path
+      - name: Build application with branch-specific path
         run: |
           if [[ "${{ steps.branch-path.outputs.path }}" != "." ]]; then
             PUBLIC_URL="${{ steps.branch-path.outputs.public_url }}" npm run build
@@ -132,14 +264,14 @@ jobs:
         env:
           CI: true
 
-      - name: 📥 Checkout gh-pages branch
+      - name: Checkout gh-pages branch
         uses: actions/checkout@v4
         with:
           ref: gh-pages
           path: gh-pages-content
         continue-on-error: true
 
-      - name: 📂 Prepare deployment directory
+      - name: Prepare deployment directory
         run: |
           # Create or use existing gh-pages directory
           mkdir -p gh-pages-deploy
@@ -172,7 +304,7 @@ jobs:
           </ul></body></html>
           EOF
 
-      - name: 🚀 Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -184,48 +316,52 @@ jobs:
           user_email: 'github-actions[bot]@users.noreply.github.com'
           commit_message: 'Deploy ${{ steps.branch-path.outputs.deploy_name }} from ${{ github.sha }}'
 
-      - name: ✅ Deployment Summary (Node 20.x only)
+      - name: Deployment Summary
         run: |
-          echo "🎉 Deployment successful!"
+          echo "Deployment successful!"
           if [[ "${{ steps.branch-path.outputs.path }}" == "." ]]; then
-            echo "📍 Production URL: https://${{ github.repository_owner }}.github.io/"
+            echo "Production URL: https://${{ github.repository_owner }}.github.io/"
           else
-            echo "📍 Branch URL: https://${{ github.repository_owner }}.github.io/${{ steps.branch-path.outputs.path }}/"
+            echo "Branch URL: https://${{ github.repository_owner }}.github.io/${{ steps.branch-path.outputs.path }}/"
           fi
-          echo "📋 All branches: https://${{ github.repository_owner }}.github.io/branches.html"
-          echo "🕒 Deployed at: $(date)"
+          echo "All branches: https://${{ github.repository_owner }}.github.io/branches.html"
+          echo "Deployed at: $(date)"
 
+  # =====================================================================
+  # Accessibility Summary (from JS lane results)
+  # =====================================================================
   accessibility-summary:
     name: Accessibility Test Summary
-    needs: test
+    needs: test-js
     runs-on: ubuntu-latest
     if: always()
 
     steps:
-      - name: 📥 Download Test Results
+      - name: Download JS Test Results
         uses: actions/download-artifact@v4
         with:
-          name: test-results
+          name: js-test-results
           path: test-results
 
-      - name: 📊 Display AccessFlow Summary
+      - name: Display AccessFlow Summary
         run: |
-          echo "## 🔍 Accessibility Test Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## Accessibility Test Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
           if [ -f "test-results/accessFlow-report-summary.json" ]; then
-            echo "✅ AccessFlow audit completed successfully!" >> $GITHUB_STEP_SUMMARY
+            echo "AccessFlow audit completed successfully!" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "\`\`\`json" >> $GITHUB_STEP_SUMMARY
             cat test-results/accessFlow-report-summary.json >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           else
-            echo "⚠️ No AccessFlow summary found" >> $GITHUB_STEP_SUMMARY
+            echo "No AccessFlow summary found" >> $GITHUB_STEP_SUMMARY
           fi
 
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📋 Test Results Available" >> $GITHUB_STEP_SUMMARY
-          echo "- Download \`playwright-report\` artifact to view detailed test reports" >> $GITHUB_STEP_SUMMARY
-          echo "- Download \`test-results\` artifact for raw test data" >> $GITHUB_STEP_SUMMARY
-
+          echo "### Test Results Available" >> $GITHUB_STEP_SUMMARY
+          echo "- Download \`js-playwright-report\` artifact for detailed JS test reports" >> $GITHUB_STEP_SUMMARY
+          echo "- Download \`js-test-results\` artifact for raw JS test data" >> $GITHUB_STEP_SUMMARY
+          echo "- Download \`python-test-results\` artifact for Python test data" >> $GITHUB_STEP_SUMMARY
+          echo "- Download \`java-test-results\` artifact for Java test data" >> $GITHUB_STEP_SUMMARY
